Fixed bug: Courses drop-down menu hover state didn't cover the whole menu on the home page because the showcase navigation dots z-index brought them infront of the dropdown menu. The fix was changing the z-index from 10 to 5.

--- a/themes/academydeliver/css-compiled/template.css
+++ b/themes/academydeliver/css-compiled/template.css
@@ -1160,7 +1160,7 @@ ul.pagination {
   margin-right: 0.5rem; }
 .modular .slideme_container .pagination {
   text-align: center;
-  z-index: 10;
+  z-index: 5;
   position: absolute;
   left: 0;
   right: 0;
